<resources>
    <string name="app_name">Famous Quotes</string>

    <string name="author">-%1$s, %2$s - %3$s</string>
    <string name="search">Search</string>
    <string name="get_random_quote">Get Random Quote</string>
    <string name="random_tab">Random</string>
    <string name="by_keyword">By Keyword</string>
    <string name="by_author">By Author</string>
    <string name="saved_quotes">Saved Quotes</string>
    <string name="toggle">Toggle</string>
    <string name="enter_search_above_to_fetch_quotes">Enter Search Above to Fetch Quotes</string>
    <string name="find_quote">Find a Quote by Searching Above.</string>
    <string name="confirm_message">Are you sure you want to delete this quote?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="app_settings">App Settings</string>
    <string name="find_quotes">Find Quotes</string>
    <string name="multi">Multi</string>
    <string name="single">Single</string>
    <string name="animation">Animation</string>
    <string name="alerts">Alerts</string>
    <string name="type">Type</string>
    <string name="keyword_author">Keyword or Author</string>
    <string name="frequency">Frequency</string>
    <string name="test">Test</string>
    <string name="how_often">How Often?</string>
    <string-array name="types_array">
        <item>Random</item>
        <item>By Keyword</item>
        <item>By Author</item>
    </string-array>
    <string name="create_alert">Create Alert</string>
    <string name="none">None</string>
    <string name="fade_in">Fade-in</string>
    <string name="slide_top">Slide Top</string>
    <string name="slide_bottom">Slide Bottom</string>
    <string name="slide_left">Slide Left</string>
    <string name="slide_right">Slide Right</string>
    <string name="grid_view">Grid View</string>
    <string name="search_here">Search Here..</string>
    <string name="categories">Categories</string>
    <string-array name="frequency_array">
        <item>Every 30 Minutes</item>
        <item>Every hour</item>
        <item>Every 2 hours</item>
        <item>Every 5 hours</item>
        <item>Every 12 hours</item>
        <item>Once a day</item>
    </string-array>
    <string-array name="categories_array">
        <item>Random</item>
        <item>By Keyword</item>
        <item>By Author</item>
    </string-array>
</resources>
