<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/searchBar"
        android:title="@string/search_here"
        app:showAsAction="always"
        app:actionViewClass="android.widget.EditText"
        app:contentInsetRight="20dp"/>
    <item android:id="@+id/toolbarButton"
        app:showAsAction="always"
        android:title="@string/search"
        android:icon="@drawable/ic_search_black_24dp" />
    <item android:id="@+id/toolbarSpinner"
        android:title="@string/categories"
        app:showAsAction="always"
        app:actionViewClass="android.widget.Spinner" />
    <item android:id="@+id/singleQuote"
        android:title="@string/single"
        android:icon="@drawable/ic_format_quote_black_24dp"
        app:showAsAction="always">
    </item>
    <item android:id="@+id/multiQuote"
        android:title="@string/multi"
        android:icon="@drawable/ic_list_black_24dp"
        app:showAsAction="always" />
    <item android:id ="@+id/gridQuote"
        android:title="@string/grid_view"
        app:showAsAction="always"
        android:icon="@drawable/ic_grid_on_black_24dp"/>
</menu>