<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/typeLabel"
        android:text="@string/type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/alertSpinner"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/keywordOrAuthorLabel"/>
    <Spinner
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/alertSpinner"
        app:layout_constraintStart_toEndOf="@id/typeLabel"
        app:layout_constraintEnd_toStartOf="@id/textButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/keywordOrAuthor"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textButton"
        android:text="@string/test"
        app:layout_constraintStart_toEndOf="@id/alertSpinner"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/keywordOrAuthor"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/keywordOrAuthorLabel"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/typeLabel"
        app:layout_constraintBottom_toTopOf="@id/FrequencyLabel"
        app:layout_constraintEnd_toStartOf="@id/keywordOrAuthor"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/keywordOrAuthor"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@id/keywordOrAuthorLabel"
        app:layout_constraintTop_toBottomOf="@id/typeLabel"
        app:layout_constraintBottom_toTopOf="@id/frequencySpinner"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/FrequencyLabel"
        android:text="@string/how_often"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/keywordOrAuthorLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/frequencySpinner"/>
    <Spinner
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/frequencySpinner"
        app:layout_constraintStart_toEndOf="@id/FrequencyLabel"
        app:layout_constraintTop_toBottomOf="@id/keywordOrAuthor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>