<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainFragment">
    <data>
        <variable
            name="quote"
            type="com.example.android.volleydemo.Quote" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:padding="5dp">
        <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/controlPanel"
            android:id="@+id/tabLayout">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/random_tab"
                />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_keyword"
                />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_author"
                />

        </com.google.android.material.tabs.TabLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/controlPanel"
            app:layout_constraintTop_toBottomOf="@id/tabLayout"
            app:layout_constraintBottom_toTopOf="@id/quoteBody"/>

        <ImageButton
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_star_yellow_40dp"
            app:layout_constraintTop_toTopOf="@id/quoteBody"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/quoteBody"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@{quote!=null?`“`+quote.message+`”`:``}"
        android:textStyle="italic"
        android:textSize="12pt"
        app:layout_constraintTop_toBottomOf="@id/controlPanel"
        app:layout_constraintBottom_toTopOf="@+id/author"
        app:layout_constraintStart_toEndOf="@id/saveBtn"
        app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/quoteBody"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@{quote!=null?String.format(@string/author, quote.author, quote.authorBirth.split(`-`)[2], quote.authorDeath.split(`-`)[2]):``}"
            android:textStyle="bold"
            android:textSize="12pt"
            android:layout_marginTop="10dp"
            />

        <Button android:id="@+id/navBtn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>